--- a/raptor_programs.ipynb
+++ b/raptor_programs.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO0kVH3NjbfBmoBZFGqTZFP",
+      "authorship_tag": "ABX9TyOZ4q/vDSXKv6JiRx/6Ck0M",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -956,9 +956,44 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "#program to produce 1-4+9-16\n",
+        "n=int(input('enter number terms to be produced :'))\n",
+        "sum=0\n",
+        "\n",
+        "for i in range(1,n+1):\n",
+        "  sq=i*i\n",
+        "  if sq%2==0:\n",
+        "    sum=sum-sq\n",
+        "  else:\n",
+        "    sum=sum+sq\n",
+        "\n",
+        "print(sum)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1GIWRIBIh9TH",
+        "outputId": "ffd556ed-a6b4-41d7-eff5-038cf0816479"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter number terms to be produced :5\n",
+            "15\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "1GIWRIBIh9TH"
+        "id": "AzMxBLd7lRUu"
       },
       "execution_count": null,
       "outputs": []
